# contentfactory

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: channel.json
content_factory/: __init__.py  api.py  cli.py  hypergen.py  pipeline.py  providers.py  render.py  workflow.py
docs/: FACTORY_BLUEPRINT.md
examples/: courtroom.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: main.jsx  reviewer.css  styles.css
tests/: test_api_episode_intake.py  test_hypergen_export.py  test_integration_factory_flow.py  test_providers_nvidia.py  test_workflow_approval_gates.py
