[project]
name = "ai-confession-content-factory"
version = "0.2.0"
description = "Evidence-first agentic documentary production pipeline"
requires-python = ">=3.11"
dependencies = ["Pillow>=10", "imageio-ffmpeg>=0.5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
content-factory = "content_factory.cli:main"

[tool.setuptools]
packages = ["content_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: renders a real media artifact"]
